<resources>
    <string name="app_name">Homework</string>
    <string name="edit_text_hint">Написать...</string>
    <string name="title_channels">Channels</string>
    <string name="title_people">People</string>
    <string name="title_profile">Profile</string>
    <string name="subscribed">Subscribed</string>
    <string name="all_stream">All streams</string>
    <string name="messages">messages</string>
    <string name="topic">Topic:</string>
    <string name="logout">Log out</string>
    <string name="online">Online</string>
    <string name="idle">Idle</string>
    <string name="offline">Offline</string>
    <string name="sharp">#%1$s</string>
    <string name="search_tooltip">Search...</string>
    <string name="users_tooltip">Users...</string>
    <string name="default_error_message">Произошла какая-то ошибка. Повторите запрос позднее</string>
    <string name="state_error_button_retry">Повторить</string>
    <string name="profile">Profile</string>
    <string name="add_stream">Добавить канал</string>
    <string name="create_channel">Создать канал</string>
    <string name="channel_name_hint">Введите имя канала</string>
    <string name="create_stream_success">Стрим успешно создан</string>
    <string name="create_stream_unsuccess">Не удалось создать стрим</string>
    <string name="ok">Ok</string>
    <string name="cancel">Отмена</string>
    <string name="add_reaction">Поставить реакцию</string>
    <string name="remove_message">Удалить сообщение</string>
    <string name="edit_message">Отредактировать сообщение</string>
    <string name="edit_message_hint">Введите новое сообщение</string>
    <string name="change_topic">Поменять топик</string>
    <string name="change_topic_hint">Введите имя нового топика</string>
    <string name="copy_to_buffer">Скопировать сообщение в буфер обмена</string>
    <string name="copy_message_success">Сообщение скопировано в буффер</string>
    <string name="copy_message_unsuccess">Не удалось скопировать сообщение в буффер</string>
    <string name="time_limit_message_error">Время на редактирование этого сообщения истекло</string>
    <string name="image_selection_cancel">Изображение не выбрано</string>
    <string name="load_image_error">Не удалось отправить изображение</string>
    <string name="reaction_error">Не удалось применить реакцию</string>
    <string name="send_message_error">Не удалось отправить сообщение</string>
    <string name="no_message">Сообщений нет</string>
    <string name="internet_error">INTERNET ERROR</string>
</resources>